fix: add correct text-overflow to cards on events section

--- a/blocks/events/__card-detail/events__card-detail.css
+++ b/blocks/events/__card-detail/events__card-detail.css
@@ -1,5 +1,6 @@
 .events__card-detail {
     margin: 0;
+    max-width: 200px;
     line-height: 20px;
     font-size: 16px;
     font-weight: 400;
@@ -7,6 +8,6 @@
     color: #96949E;
 
     text-overflow: ellipsis;
-    white-space: wrap;
+    white-space: nowrap;
     overflow: hidden;
 }
